[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.87"
bytes = "1.10.1"
clap = "4.5.32"
env_logger = "0.11.7"
futures = "0.3.31"
jemallocator = "0.5.4"
log = "0.4.26"
pingora = "0.4.0"
pingora-core = "0.4.0"
pingora-http = "0.4.0"
pingora-load-balancing = "0.4.0"
pingora-proxy = "0.4.0"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = "1.44.0"
